--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "resume-ui": {
+    "life-bytes": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/resume-ui",
+            "outputPath": "dist/life-bytes",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -67,18 +67,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "resume-ui:build"
+            "browserTarget": "life-bytes:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "resume-ui:build:production"
+              "browserTarget": "life-bytes:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "resume-ui:build"
+            "browserTarget": "life-bytes:build"
           }
         },
         "test": {
@@ -115,15 +115,15 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "resume-ui:serve"
+            "devServerTarget": "life-bytes:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "resume-ui:serve:production"
+              "devServerTarget": "life-bytes:serve:production"
             }
           }
         }
       }
     }},
-  "defaultProject": "resume-ui"
+  "defaultProject": "life-bytes"
 }
