blogging page set in.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "life-bytes",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -20,6 +20,8 @@
     "@angular/platform-browser-dynamic": "~8.2.9",
     "@angular/router": "~8.2.9",
     "bootstrap": "^4.5.0",
+    "compass": "^0.1.1",
+    "compass-mixins": "^0.12.10",
     "jquery": "^3.5.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
